.k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: planetexpress-__CI_ENVIRONMENT_SLUG__
  namespace: gitlab-managed-apps
  labels:
    app: planetexpress
    ref: __CI_ENVIRONMENT_SLUG__
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/scheme: "http"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: planetexpress
    ref: __CI_ENVIRONMENT_SLUG__
