.k8s/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: planetexpress-__CI_ENVIRONMENT_SLUG__
  namespace: planetexpress-__CI_ENVIRONMENT_SLUG__
  labels:
    app: planetexpress
    ref: __CI_ENVIRONMENT_SLUG__
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: __CI_ENVIRONMENT_SLUG__.planetexpress.io
    http:
      paths:
      - path: /
        backend:
          serviceName: planetexpress-__CI_ENVIRONMENT_SLUG__
          servicePort: 80
